--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - db
 
   db:
+    container_name: emmi_db
     image: postgres:15
     restart: always
     environment:
@@ -23,6 +24,11 @@ services:
       POSTGRES_PASSWORD: arkano
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ebyted"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
