--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,15 @@ services:
 
 volumes:
   postgres_data:
+  
+nginx:
+  image: nginx:latest
+  ports:
+    - "80:80"
+    - "443:443"
+  volumes:
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./static:/static
+  depends_on:
+    - web 
+  
