--- a/nginx.conf
+++ b/nginx.conf
@@ -5,17 +5,21 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    sendfile on;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
     keepalive_timeout 65;
+
+    upstream django {
+        server web:8000;  # <- esto debe coincidir con el nombre del servicio en docker-compose
+    }
 
     server {
         listen 80;
         server_name emmibrows.com www.emmibrows.com;
 
         location / {
-            proxy_pass http://web:8000;
+            proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
