feat: update web service command in docker-compose.yml to wait for DB readiness before starting migrations and Gunicorn

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ services:
   web:
     build: .
     container_name: emmi_web
-    command: bash -c "python manage.py migrate && gunicorn backend.wsgi:application --bind 0.0.0.0:8002"
+    command:  until nc -z db 5432; do echo '⏳ Esperando a DB...'; sleep 1; done;
+      echo '✅ DB lista';
+      python manage.py migrate &&
+      gunicorn config.wsgi:application --bind 0.0.0.0:8005"
     volumes:
       - .:/app
     working_dir: /app
@@ -24,10 +27,6 @@ services:
       - "traefik.http.routers.emmisecure.service=emmiservice"
 
       - "traefik.http.services.emmiservice.loadbalancer.server.port=8002"
-
-    command: >
-      bash -c "python manage.py migrate &&
-               gunicorn backend.wsgi:application --bind 0.0.0.0:8002"
 
   db:
     container_name: emmi_db
