--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
+version: '3.8'
+
 services:
   web:
     build: .
     container_name: emmi_web
-    command:  until nc -z db 5432; do echo '⏳ Esperando a DB...'; sleep 1; done;
+    command: >
+      bash -c "until nc -z db 5432; do echo '⏳ Esperando a DB...'; sleep 1; done;
       echo '✅ DB lista';
       python manage.py migrate &&
       gunicorn config.wsgi:application --bind 0.0.0.0:8002"
@@ -12,40 +15,35 @@ services:
     env_file:
       - .env
     networks:
-      - default
-      - dokploy-network
+      - traefik
     labels:
       - "traefik.enable=true"
-
       - "traefik.http.routers.emmi.rule=Host(`emmibrows.com`)"
       - "traefik.http.routers.emmi.entrypoints=web"
       - "traefik.http.routers.emmi.service=emmiservice"
-
       - "traefik.http.routers.emmisecure.rule=Host(`emmibrows.com`)"
       - "traefik.http.routers.emmisecure.entrypoints=websecure"
       - "traefik.http.routers.emmisecure.tls.certresolver=letsencrypt"
       - "traefik.http.routers.emmisecure.service=emmiservice"
-
       - "traefik.http.services.emmiservice.loadbalancer.server.port=8002"
+    restart: unless-stopped
 
   db:
     image: postgres:15
+    container_name: emmi_db
+    environment:
+      - POSTGRES_DB=emmi_db
+      - POSTGRES_USER=ebyted
+      - POSTGRES_PASSWORD=arkano
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    restart: always
     networks:
-     - default
-     - dokploy-network
+      - traefik
+    restart: always
+
+networks:
+  traefik:
+    external: true
 
 volumes:
   postgres_data:
-
-networks:
-  default:
-    driver: bridge
-  dokploy-network:
-    external: true
