fix: update POSTGRES_USER in environment configuration

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DEBUG=0
 SECRET_KEY=arkanoia
 DJANGO_ALLOWED_HOSTS=168.231.67.221
 POSTGRES_DB=emmi_db
-POSTGRES_USER=ebyted
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=arkano
 POSTGRES_HOST=db 
 POSTGRES_PORT=5432
