fix: add Traefik service configuration to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  traefik:
+    image: traefik:v2.10
+    command:
+      - "--configFile=/etc/traefik/traefik.yml"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/dokploy/traefik/sites/emmi/traefik.yml:/etc/traefik/traefik.yml
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /etc/dokploy/traefik/sites/emmi/letsencrypt:/letsencrypt
+    networks:
+      - default
+      - dokploy-network
   web:
     build: .
     container_name: emmi_web
