--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ services:
   web:
     build: .
     container_name: emmi_web
-    command:  until nc -z db 5432; do echo '⏳ Esperando a DB...'; sleep 1; done;
-      echo '✅ DB lista';
-      python manage.py migrate &&
-      gunicorn config.wsgi:application --bind 0.0.0.0:8002"
+    command: >
+      ./wait-for-db.sh db &&
+       python manage.py migrate &&
+       gunicorn config.wsgi:application --bind 0.0.0.0:8002
     volumes:
       - .:/app
     working_dir: /app
@@ -16,16 +16,13 @@ services:
       - dokploy-network
     labels:
       - "traefik.enable=true"
-
       - "traefik.http.routers.emmi.rule=Host(`emmibrows.com`)"
       - "traefik.http.routers.emmi.entrypoints=web"
       - "traefik.http.routers.emmi.service=emmiservice"
-
       - "traefik.http.routers.emmisecure.rule=Host(`emmibrows.com`)"
       - "traefik.http.routers.emmisecure.entrypoints=websecure"
       - "traefik.http.routers.emmisecure.tls.certresolver=letsencrypt"
       - "traefik.http.routers.emmisecure.service=emmiservice"
-
       - "traefik.http.services.emmiservice.loadbalancer.server.port=8002"
 
   db:
@@ -34,20 +31,16 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      environment:
       - POSTGRES_DB=emmi_db
       - POSTGRES_USER=ebyted
       - POSTGRES_PASSWORD=arkano
-    restart: always
     networks:
-     - default
-     - dokploy-network
+      - default
+      - dokploy-network
 
 volumes:
   postgres_data:
 
 networks:
-  default:
-    driver: bridge
   dokploy-network:
     external: true
