fix: update web service command in docker-compose.yml for correct script execution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,10 @@ services:
   web:
     build: .
     container_name: emmi_web
-    command: >
-      /scripts/wait-for-db.sh db &&
+    command: bash -c "
+      ./wait-for-db.sh db &&
       python manage.py migrate &&
-      gunicorn config.wsgi:application --bind 0.0.0.0:8002
+      gunicorn config.wsgi:application --bind 0.0.0.0:8002"
     volumes:
       - .:/app
     working_dir: /app
