fix: add ports configuration for web service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - .env
     depends_on:
       - db
+    ports:
+      - "8002:8002"
     networks:
       - default
       - dokploy-network
