--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   traefik:
     image: traefik:v2.10
@@ -16,7 +14,7 @@ services:
       - dokploy-network
     restart: always
 
-  web:
+  web: 
     build:
       context: .
       dockerfile: Dockerfile
@@ -36,7 +34,7 @@ services:
     command: bash -c "
       ./wait-for-db.sh db &&
       python manage.py migrate &&
-      gunicorn backend.wsgi:application --bind 0.0.0.0:8002"
+      exec gunicorn backend.wsgi:application --bind 0.0.0.0:8002"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.emmi.rule=Host(`emmibrows.com`)"
