fix: add collectstatic command in Dockerfile and configure volume for static files in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - .env
     depends_on:
       - db
+    volumes:
+      - ./staticfiles:/app/staticfiles  # <-- Aquí se monta la carpeta generada por collectstatic
 
   db:
     image: postgres:15
