--- a/.env
+++ b/.env
@@ -4,5 +4,8 @@ DJANGO_ALLOWED_HOSTS=168.231.67.221
 POSTGRES_DB=emmi_db
 POSTGRES_USER=ebyted
 POSTGRES_PASSWORD=arkano
-POSTGRES_HOST=127.0.0.1 
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+DJANGO_SETTINGS_MODULE=backend.settings
+DJANGO_ENV=development
+DJANGO_DEBUG=True
